# alagba

./: .gitignore  README.md  SelectiveMethod.cpp  train_architectures.py
Laud/: CMakeLists.txt  README  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
NestRecognition/: CMakeLists.txt  Classifier.cpp  Classifier.h  ISlideMethod.h  README  SelectiveMethod.h  SlideWindowMethod.cpp  SlideWindowMethod.h  main.cpp
NestRecognition/SelectiveSearchMethod/segment/: filter.h  segment-graph.h
SelectiveSearchMethod/: SelectiveSearchMethod.cpp
SelectiveSearchMethod/segment/: disjoint-set.h
Tijeras/: CMakeLists.txt  README
Tracking/: CMakeLists.txt  README  main.cpp
Tracking/Classifier/: Classifier.cpp  Classifier.h  SlideWindowMethod.cpp
Tracking/Classifier/SelectiveSearchMethod/: SelectiveSearchMethod.h
Tracking/Classifier/SelectiveSearchMethod/segment/: segment-image.h
